Bug 486041 - ToolButtons don't render a decoration when they have Tab focus
Summary: ToolButtons don't render a decoration when they have Tab focus
Status: RESOLVED FIXED
Alias: None
Product: frameworks-qqc2-desktop-style
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-23 22:10 UTC by Aleix Pol
Modified: 2024-06-07 19:56 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2024-04-23 22:10:39 UTC
If you open any Kirigami app (Kirigami Gallery, Discover) and tab your way through the UI, at least the toolbuttons on the tool bar won't show a decoration.

It works on widgets applications with breeze.
It works if I set QT_QUICK_CONTROLS_STYLE=org.kde.breeze.
It doesn't work if I change the QStyle to a different one.
Comment 1 Bug Janitor Service 2024-05-26 00:59:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/412
Comment 2 Aleix Pol 2024-05-27 15:29:14 UTC
Git commit c6006ca5d16e6374a3c5a03da380f03e590442c4 by Aleix Pol.
Committed on 26/05/2024 at 00:58.
Pushed by apol into branch 'master'.

Fix rendering the focus of our items

Due to a Qt bug, we cannot rely on QQuickControl::focusReasonChanged to
notify us when our focus reason changes.
https://bugreports.qt.io/browse/QTBUG-125725

Instead, check which is the focus reason changes. I suggest we ifdef it
out once we find a good fix.

M  +2    -0    plugin/kquickstyleitem.cpp

https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/c6006ca5d16e6374a3c5a03da380f03e590442c4