Fix rendering the focus of our items

Due to a Qt bug, we cannot rely on QQuickControl::focusReasonChanged to
notify us when our focus reason changes.
https://bugreports.qt.io/browse/QTBUG-125725

Instead, check which is the focus reason changes. I suggest we ifdef it
out once we find a good fix.

BUG: 486041